# quic

./: .clang-format  .gitignore  .gitmodules  .lgtm.yml  .projectile  BUILD.ubuntu20.04.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  erlang_ls.config  get-msquic.sh  pkgname.sh  rebar.config  rebar.config.script  rel.mk
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: copilot-instructions.md
.github/workflows/: asan.yml  cflite-batch.yml  cflite-pr.yml  clusterfuzzlite.yml  code-format.yaml  codeball.yml  codeql.yml  cover.yaml  hex_pub.yml  lux.yml  main.yml  release.yaml
c_src/: quicer_config.c  quicer_config.h  quicer_connection.c  quicer_connection.h  quicer_ctx.c  quicer_ctx.h  quicer_dgram.c  quicer_dgram.h  quicer_eterms.h  quicer_internal.h  quicer_listener.c  quicer_listener.h  quicer_nif.c  quicer_nif.h  quicer_owner_queue.c  quicer_owner_queue.h  quicer_queue.c  quicer_queue.h  quicer_reg.c  quicer_reg.h  quicer_stream.c  quicer_stream.h  quicer_tls.c  quicer_tls.h  quicer_tp.c  quicer_tp.h  quicer_vsn.h.in
docs/: API.org  DesignDecisions.md  Terminology.md  internal.org  internals.org  interworking.org  messages_to_owner.md  todo.org
fuzz/: .gitignore  README.md  build.sh  fuzz_config.c  project.yaml
fuzz/corpus/fuzz_config/: seed1  seed2  seed3
include/: quicer.hrl  quicer_types.hrl  quicer_vsn.hrl  quicer_vsn.hrl.in
msquic_patches/: README.md
src/: quic.app.src  quic.erl  quicer.app.src  quicer.appup.src  quicer.erl  quicer_app.erl  quicer_appl.erl  quicer_appl_sup.erl  quicer_conn_acceptor.erl  quicer_conn_acceptor_sup.erl  quicer_connection.erl  quicer_demo.erl  quicer_lib.erl  quicer_listener.erl  quicer_listener_sup.erl  quicer_local_stream.erl  quicer_nif.erl  quicer_remote_stream.erl  quicer_server_conn_callback.erl  quicer_server_stream_callback.erl  quicer_stream.erl  quicer_sup.erl
templates/: quicer_vsn.h.in  quicer_vsn.hrl.in
test/: certs.erl  example_client_connection.erl  example_client_stream.erl  example_server_connection.erl  example_server_stream.erl  prop_quic_types.hrl  prop_quicer_nif.erl  prop_stateful_client_conn.erl  prop_stateful_conn.erl  prop_stateful_server_conn.erl  prop_stateful_stream.erl  prop_stream_sig_queue.erl  quic_SUITE.erl  quicer_SUITE.erl  quicer_connecion_SUITE.erl  quicer_connection_SUITE.erl  quicer_ct.hrl  quicer_echo_server_stream_callback.erl  quicer_listener_SUITE.erl  quicer_nif_macro.hrl  quicer_prop_gen.erl  quicer_reg_SUITE.erl  quicer_snb_SUITE.erl  quicer_test_lib.erl  quicer_upgrade_SUITE.erl
test/example/: Makefile  README.md  basic.lux  cert.pem  cey.pem  close.lux  connect_stream.lux  die.lux  exit.lux  exit2.lux  key.pem  nat.lux  p_connect.lux  ping1000.lux  qt.erl  qt_ssl.erl  rev.erl  rev.lux  simple.inc  suspend.lux  suspend2.lux  user_default.erl
test/fuzz/: CMakeLists.txt  FUZZING.md  fuzz_cred_config.c  nif_shim.c  nif_shim.h
test/fuzz/corpus/fuzz_cred_config/: seed_alpn  seed_asn1  seed_server_client
test/quicer_SUITE_data/: cert.pem
test/quicer_snb_SUITE_data/: key.pem
tools/: update-copyright-year.sh
tools/asan/: README.md
tools/run/: README.md
